<resources>
    <string name="app_name">Jobamate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="jobaseeker">JobaSeeker</string>
    <string name="home">Home</string>
    <string name="job_title">Job Title</string>
    <string name="company_name">Company Name</string>
    <string name="job_location">Job Location</string>
    <string name="job_type">Full-Time</string>
    <string name="job_salary">Salary: $100,000 - $120,000</string>
    <string name="btn_details">Lihat Details</string>
    <string name="halo">Halo, </string>
    <string name="name">lorem Ipsum</string>
    <string name="description">Tersedia peluang kerja inklusif untuk difabel di JobaMate. \nTemukan pekerjaan sesuai potensi Anda di sini!</string>
    <string name="rekomendasi_pekerjaan">Rekomendasi Pekerjaan</string>
    <string name="see_all_rekomendation">Lihat Semua</string>
    <string name="profile_name">Lion Arthur Dybala</string>
    <string name="profile_image">profile image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="resume_cv"><![CDATA[Resume & CV]]></string>
    <string name="my_favorite_job">My Favorite Job</string>
    <string name="upload">Upload</string>
    <string name="simpan">Simpan</string>
    <string name="change_picture">Change Picture</string>
    <string name="enter_name">Masukkan Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="no_hp">Masukkan No. Handphone</string>
    <string name="password">Password</string>
    <string name="btn_simpan">SIMPAN</string>
    <string name="detail_pekerjaan">Detail Pekerjaan</string>
    <string name="location">Jakarta Selatan</string>
    <string name="job_description">Deskripsi Pekerjaan</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dignissim rutrum dui quis malesuada. Nam id dapibus augue. Nulla convallis condimentum orci, et varius eros semper in.</string>
    <string name="job_responsibility">Tanggung Jawab</string>
    <string name="job_termscondition"><![CDATA[Syarat & Ketentuan\n]]></string>
    <string name="btn_lamar">Lamar Sekarang</string>
    <string name="btn_back">Back Button</string>
    <string name="bookmark_button">BookMark Button</string>
    <string name="exit_dialog_message">PERHATIAN!!!</string>
    <string name="alert_msg">Anda Harus Mengikuti Pelatihan Terlebih Dahulu</string>
    <string name="msg_daftar_pelatihan">Daftar</string>
    <string name="msg_batal">Batal</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="silahkan_login_dengan_akun_anda">silahkan login dengan akun anda</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ingat_saya">ingat saya</string>
    <string name="saya_lupa_kata_sandi_saya">Lupa kata sandi</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar disini!</string>
    <string name="ketik_kata_sandi_anda">Ketik kata sandi Anda</string>
    <string name="nama">Nama</string>
    <string name="ketik_nama_anda">Ketik nama Anda</string>
    <string name="ketik_email_anda">Ketik email Anda</string>
    <string name="ketik_telepon_anda">Ketik No. Telepon Anda</string>
    <string name="alamat">Alamat</string>
    <string name="ketik_alamat_anda">Ketik Alamat Anda</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="pilih_tanggal_lahir_anda">Pilih Tanggal Lahir Anda</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="ketik_password_anda_sekali_lagi">Ketik password Anda sekali lagi</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun?</string>
    <string name="jenis_disabilitas">Jenis Disabilitas</string>
</resources>