<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:paddingStart="24dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/exit_dialog_message"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/fontCardStyleJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAlertMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alert_msg"
            />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDaftarPelatihan"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/msg_daftar_pelatihan"/>

            <Button
                android:id="@+id/btnBatal"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:text="@string/msg_batal"/>




        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>