<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailJobActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDetailPekerjaan"
        style="@style/fontCardStyleBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/detail_pekerjaan"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_back"
        app:layout_constraintEnd_toStartOf="@+id/textViewDetailPekerjaan"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bannercompany"
        android:layout_width="143dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image"
        app:layout_constraintEnd_toEndOf="@+id/textViewDetailPekerjaan"
        app:layout_constraintStart_toStartOf="@+id/textViewDetailPekerjaan"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetailPekerjaan"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_company_name"
        style="@style/fontCardStyleJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/iv_bannercompany"
        app:layout_constraintStart_toStartOf="@+id/iv_bannercompany"
        app:layout_constraintTop_toBottomOf="@+id/iv_bannercompany" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_name">

        <TextView
            android:id="@+id/tv_lokasi"
            style="@style/fontCardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="111dp"
            android:text="@string/location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_job_type"
            style="@style/fontCardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="125dp"
            android:text="@string/job_type"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        style="@style/fontCardStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/job_salary"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toTopOf="@+id/bottomLinearView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Place all your LinearLayouts here -->
            <LinearLayout
                android:id="@+id/descripton_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_job_description_title"
                    style="@style/fontCardStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_description" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:dividerColor="@color/black"
                    app:thickness="2dp" />

                <TextView
                    android:id="@+id/tv_job_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/responsibility_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_job_responsibility_title"
                    style="@style/fontCardStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_responsibility" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:dividerColor="@color/black"
                    app:thickness="2dp" />

                <TextView
                    android:id="@+id/tv_job_responsibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem" />

                <!-- Content of responsibility_layout -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/termscondition_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_job_termscondition_title"
                    style="@style/fontCardStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/job_termscondition" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:dividerColor="@color/black"
                    app:thickness="2dp" />

                <TextView
                    android:id="@+id/tv_job_termscondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem" />
                <!-- Content of termscondition_layout -->
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLinearView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_lamar"
            android:layout_width="221dp"
            android:layout_height="match_parent"
            android:text="@string/btn_lamar" />
        <ImageView
            android:id="@+id/btn_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/icon_no_bookmark_button"
            android:contentDescription="BookMark Button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>