<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="16dp"
    android:padding="24dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_company_logo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/company_name" />

        <TextView
            android:id="@+id/tv_job_title"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="@style/fontCardStyleJob"
            app:layout_constraintStart_toEndOf="@+id/iv_company_logo"
            app:layout_constraintTop_toTopOf="@+id/iv_company_logo"
            android:text="@string/job_title"
            android:maxLines="2"
            android:ellipsize="end" />


        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/company_name"
            style="@style/fontCardStyle"
            app:layout_constraintStart_toEndOf="@+id/iv_company_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_title" />

        <TextView
            android:id="@+id/tv_job_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="@string/job_location"
            style="@style/fontCardStyle"
            app:layout_constraintStart_toEndOf="@+id/iv_company_logo"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_name"
            app:drawableLeftCompat="@drawable/icon_location" />


        <TextView
            android:id="@+id/tv_job_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/job_type"
            style="@style/fontCardStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_company_logo" />

        <TextView
            android:id="@+id/tv_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/job_salary"
            style="@style/fontCardStyleBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_job_type" />

        <Button
            android:id="@+id/btn_see_details"
            style="@style/buttonWithIconOnly"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/primary"
            app:icon="@drawable/icon_right_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_salary"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>